[project]
name = "warn-v2"
version = "0.1.0"
description = "WARN Scraper V2 — AI-assisted state layoff-notice collector"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Raphael Wieland", email = "raphael@wielandtech.com" }]

dependencies = [
    "httpx>=0.27",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "html5lib>=1.1",
    "pymupdf>=1.24",
    "pydantic>=2.7",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "prometheus-client>=0.20",
    "tenacity>=8.5",
    "structlog>=24.1",
    "python-dateutil>=2.9",
    "click>=8.1",
    "pdfplumber>=0.11.9",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "respx>=0.21",
]
browser = ["playwright>=1.45"]

[project.scripts]
warn-v2 = "warn_v2.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["warn_v2"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
